[ECMA-402] Fix Intl.DateTimeFormat patterns and fields in WebKit https://bugs.webkit.org/show_bug.cgi?id=209783

Reviewed by Keith Miller.

JSTests:

* stress/date-toLocaleString.js:
* stress/intl-datetimeformat.js:
Add tests and fix some existing ones.

* test262/config.yaml:
* test262/expectations.yaml:
Mark eight test cases passing...but skip half of them due to outdated CLDR data in macOS system ICU.

Source/JavaScriptCore:

This patch implements two intertwining normative changes to Intl.DateTimeFormat:
  - Calendar setting must be taken into account when choosing a date-time pattern
    https://github.com/tc39/ecma402/pull/349
  - formatToParts must recognize relatedYear and yearName parts
    https://github.com/tc39/ecma402/pull/349

* runtime/IntlDateTimeFormat.cpp:
(JSC::IntlDateTimeFormat::initializeDateTimeFormat):
(JSC::IntlDateTimeFormat::partTypeString):


Canonical link: https://commits.webkit.org/223435@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260145 268f45cc-cd09-0410-ab3c-d52691b4dbfc